--- a/Case_Study/view/facility/Create.html
+++ b/Case_Study/view/facility/Create.html
@@ -75,17 +75,16 @@
   <div class="container h-100">
     <div class="contact-banner">
       <div class="text-center">
-        <h1>Facility</h1>
+        <h1>Dịch Vụ</h1>
       </div>
     </div>
   </div>
 </section>
 
-
 <div class="col-lg-12 mt-4">
   <div class="container-fluid">
     <div class="row">
-      <h2>Edit Facility</h2>
+      <h2>Thêm Mới Dịch Vụ</h2>
       <table class="table" cellpadding="5">
         <tr>
           <th>Loại dịch vụ:</th>
@@ -100,31 +99,19 @@
         </tr>
         <tr>
           <th>Tên dịch vụ:</th>
-          <td>
-            <input type="text" class="form-control">
-          </td>
-
+          <td><input type="text" class="form-control"></td>
         </tr>
         <tr>
           <th>Diện tích:</th>
-          <td>
-            <input type="text" class="form-control">
-          </td>
-
+          <td><input type="text" class="form-control"></td>
         </tr>
         <tr>
           <th>Giá thuê:</th>
-          <td>
-            <input type="text" class="form-control">
-          </td>
-
+          <td><input type="text" class="form-control"></td>
         </tr>
         <tr>
           <th>Số người tối đa:</th>
-          <td>
-            <input type="text" class="form-control">
-          </td>
-
+          <td><input type="text" class="form-control"></td>
         </tr>
         <tr>
           <th>Kiểu thuê:</th>
@@ -138,11 +125,10 @@
             </select>
           </td>
         </tr>
-
         <tr hidden id="standardRoom">
           <th>Loại phòng:</th>
           <td>
-            <select class="form-select" >
+            <select class="form-select">
               <option value="0">--Loại Phòng--</option>
               <option value="1">VIP</option>
               <option value="2">Professional</option>
@@ -153,29 +139,20 @@
         </tr>
         <tr hidden id="otherDescription">
           <th>Tiện nghi khác:</th>
-          <td>
-            <input class="form-control" type="text"/>
-          </td>
+          <td><input class="form-control" type="text"/></td>
         </tr>
         <tr hidden id="poolArea">
           <th>Diện tích hồ bơi:</th>
-          <td>
-            <input class="form-control" type="text"/>
-          </td>
+          <td><input class="form-control" type="text"/></td>
         </tr>
         <tr hidden id="numberFloor">
           <th>Số tầng:</th>
-          <td>
-            <input class="form-control" type="text"/>
-          </td>
+          <td><input class="form-control" type="text"/></td>
         </tr>
         <tr hidden id="facilityFree">
           <th>Dịch vụ miễn phí đi kèm:</th>
-          <td>
-            <input class="form-control" type="text"/>
-          </td>
+          <td><input class="form-control" type="text"/></td>
         </tr>
-
         <tr>
           <td align="center">
             <a href="Facility.html">
