--- a/Case_Study/view/facility/Facility.html
+++ b/Case_Study/view/facility/Facility.html
@@ -75,7 +75,7 @@
   <div class="container h-100">
     <div class="contact-banner">
       <div class="text-center">
-        <h1>Facility</h1>
+        <h1>Dịch vụ</h1>
       </div>
     </div>
   </div>
@@ -84,7 +84,7 @@
   <div class="container">
     <div class="col-12" style="display: flex">
       <div class="section-intro text-center pb-80px col-6">
-        <div class="section-intro__style" >
+        <div class="section-intro__style">
           <a href="#" style="text-decoration: none">
             <img src="../../img/home/bed-icon.png" alt="">
             <h2>Explore Our Rooms</h2>
@@ -95,14 +95,11 @@
         <div class="section-intro__style">
           <a href="Create.html" style="text-decoration: none">
             <img src="../../img/home/bed-icon.png" alt="">
-            <h2>Create Room</h2>
+            <h2>Thêm mới Dịch vụ</h2>
           </a>
         </div>
       </div>
     </div>
-
-
-
 
     <div class="row pb-4">
       <div class="col-md-6 col-xl-4 mb-5">
@@ -124,8 +121,9 @@
             <!-- Modal -->
             <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel"
                  aria-hidden="true">
-              <div class="modal-dialog"style="position: absolute;float: left;left: 50%;top: 50%; transform: translate(-50%, -50%); width: 500px">
-              <div class="modal-content">
+              <div class="modal-dialog"
+                   style="position: absolute;float: left;left: 50%;top: 50%; transform: translate(-50%, -50%); width: 500px">
+                <div class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel1">Modal title</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -163,8 +161,9 @@
             <!-- Modal -->
             <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel"
                  aria-hidden="true">
-              <div class="modal-dialog"style="position: absolute;float: left;left: 50%;top: 50%; transform: translate(-50%, -50%); width: 500px">
-              <div class="modal-content">
+              <div class="modal-dialog"
+                   style="position: absolute;float: left;left: 50%;top: 50%; transform: translate(-50%, -50%); width: 500px">
+                <div class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel2">Modal title</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -202,7 +201,8 @@
             <!-- Modal -->
             <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel"
                  aria-hidden="true">
-              <div class="modal-dialog"style="position: absolute;float: left;left: 50%;top: 50%; transform: translate(-50%, -50%); width: 500px">
+              <div class="modal-dialog"
+                   style="position: absolute;float: left;left: 50%;top: 50%; transform: translate(-50%, -50%); width: 500px">
                 <div class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel3">Modal title</h5>
@@ -241,8 +241,9 @@
             <!-- Modal -->
             <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel"
                  aria-hidden="true">
-              <div class="modal-dialog"style="position: absolute;float: left;left: 50%;top: 50%; transform: translate(-50%, -50%); width: 500px">
-              <div class="modal-content">
+              <div class="modal-dialog"
+                   style="position: absolute;float: left;left: 50%;top: 50%; transform: translate(-50%, -50%); width: 500px">
+                <div class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel4">Modal title</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -280,8 +281,9 @@
             <!-- Modal -->
             <div class="modal fade" id="exampleModal5" tabindex="-1" aria-labelledby="exampleModalLabel"
                  aria-hidden="true">
-              <div class="modal-dialog"style="position: absolute;float: left;left: 50%;top: 50%; transform: translate(-50%, -50%); width: 500px">
-              <div class="modal-content">
+              <div class="modal-dialog"
+                   style="position: absolute;float: left;left: 50%;top: 50%; transform: translate(-50%, -50%); width: 500px">
+                <div class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel5">Modal title</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -319,8 +321,9 @@
             <!-- Modal -->
             <div class="modal fade" id="exampleModal6" tabindex="-1" aria-labelledby="exampleModalLabel"
                  aria-hidden="true">
-              <div class="modal-dialog"style="position: absolute;float: left;left: 50%;top: 50%; transform: translate(-50%, -50%); width: 500px">
-              <div class="modal-content">
+              <div class="modal-dialog"
+                   style="position: absolute;float: left;left: 50%;top: 50%; transform: translate(-50%, -50%); width: 500px">
+                <div class="modal-content">
                   <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel6">Modal title</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
