--- a/Case_Study/view/contract/Create.html
+++ b/Case_Study/view/contract/Create.html
@@ -2,9 +2,213 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Seaplace Hotel - About us</title>
+
+  <link rel="icon" href="../../img/favicon.png" type="image/png">
+  <link rel="stylesheet" href="../../vendors/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="../../vendors/fontawesome/css/all.min.css">
+  <link rel="stylesheet" href="../../vendors/themify-icons/themify-icons.css">
+  <link rel="stylesheet" href="../../vendors/linericon/style.css">
+  <link rel="stylesheet" href="../../vendors/magnefic-popup/magnific-popup.css">
+  <link rel="stylesheet" href="../../vendors/owl-carousel/owl.theme.default.min.css">
+  <link rel="stylesheet" href="../../vendors/owl-carousel/owl.carousel.min.css">
+  <link rel="stylesheet" href="../../vendors/nice-select/nice-select.css">
+
+  <link rel="stylesheet" href="../../css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+<header class="header_area">
+  <div class="header-top">
+    <div class="container">
+      <div class="d-flex align-items-center">
+        <div id="logo">
+          <a href="../index.html"><img src="../../img/logo@2x.png" alt="" title="" width="63" height="80"/></a>
+        </div>
+        <div class="ml-auto d-none d-md-block d-md-flex">
+          <div class="media header-top-info">
+            <span class="header-top-info__icon"><i class="fas fa-phone-volume"></i></span>
+            <div class="media-body">
+              <p>Have any question?</p>
+              <p>Free: 84-236-3847 333/888</p>
+            </div>
+          </div>
+          <div class="media header-top-info">
+            <span class="header-top-info__icon"><i class="ti-email"></i></span>
+            <div class="media-body">
+              <p>Have any question?</p>
+              <p>Free: reservation@furamavietnam.com</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
+
+  <div class="main_menu">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container">
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+          <ul class="nav navbar-nav menu_nav">
+            <li class="nav-item active"><a class="nav-link" href="../index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="Customer.html">Customer</a></li>
+            <li class="nav-item"><a class="nav-link" href="../facility/Facility.html">Facility</a></li>
+            <li class="nav-item"><a class="nav-link" href="../contract/Contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+</header>
+<section class="blog-banner-area" id="about">
+  <div class="container h-100">
+    <div class="blog-banner">
+      <div class="text-center">
+        <h1>Hợp Đồng</h1>
+      </div>
+    </div>
+  </div>
+</section>
+<div class="col-lg-12 mt-4">
+  <div class="container-fluid">
+    <div class="row">
+      <h2>Thêm Mới hợp đồng</h2>
+      <table class="table" cellpadding="5">
+        <tr>
+          <th>Dịch vụ:</th>
+          <td>
+            <select class="form-select">
+              <option value="0">--Chọn dịch vụ--</option>
+              <option value="1">Phòng suite hướng biển</option>
+              <option value="2">Phòng studio hướng biển</option>
+              <option value="3">Phòng deluxe hướng biển</option>
+              <option value="4">Phòng superior hướng hồ</option>
+              <option value="5">Phòng studio hướng vườn</option>
+              <option value="6">Phòng deluxe hướng vườn</option>
+            </select>
+          </td>
+        </tr>
+        <tr>
+          <th>Khách Hàng:</th>
+          <td>
+            <select class="form-select">
+              <option value="0">--Chọn khách hàng--</option>
+              <option value="1">Phạm Thành Tri</option>
+              <option value="2">Thanh Tuyền</option>
+            </select>
+          </td>
+        </tr>
+        <tr>
+          <th>Ngày Làm Hợp Đồng:</th>
+          <td><input class="form-control" type="date"></td>
+        </tr>
+        <tr>
+          <th>Ngày Làm Kết Thúc Hợp Đồng:</th>
+          <td><input class="form-control" type="date"></td>
+        </tr>
+        <tr>
+          <th>Tiền Đặt Cọc:</th>
+          <td><input class="form-control" type="number"></td>
+        </tr>
+        <tr>
+          <th>Tổng Tiền:</th>
+          <td><input class="form-control" type="number"></td>
+        </tr>
+        <tr>
+          <th>Dịch Vụ Đi Kèm:</th>
+          <td>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#attachPlus">
+              +
+            </button>
+            <div class="modal fade" id="attachPlus"
+                 data-bs-backdrop="static"
+                 data-bs-keyboard="false" tabindex="-1" aria-labelledby="addAttachFacilityLabel"
+                 aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header bg-primary">
+                    <h5 class="modal-title text-white" id="plus1Label">Thêm dịch vụ đi kèm</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <table class="table table-striped table-bordered">
+                      <tr>
+                        <td>Thuê xe đạp <input type="checkbox" class="form-check"></td>
+                        <td><input type="number" name="quantity" value="0" class="form-control"></td>
+                      </tr>
+                      <tr>
+                        <td>Thuê xe máy <input type="checkbox" class="form-check"></td>
+                        <td><input type="number" name="quantity" value="0" class="form-control"></td>
+                      </tr>
+                      <tr>
+                        <td>Karaoke <input type="checkbox" class="form-check"></td>
+                        <td><input type="number" name="quantity" value="0" class="form-control"></td>
+                      </tr>
+                      <tr>
+                        <td>Buffet buổi sáng <input type="checkbox" class="form-check"></td>
+                        <td><input type="number" name="quantity" value="0" class="form-control"></td>
+                      </tr>
+                      <tr>
+                        <td>Buffet buổi trưa <input type="checkbox" class="form-check"></td>
+                        <td><input type="number" name="quantity" value="0" class="form-control"></td>
+                      </tr>
+                      <tr>
+                        <td>Buffet buổi tối <input type="checkbox" class="form-check"></td>
+                        <td><input type="number" name="quantity" value="0" class="form-control"></td>
+                      </tr>
+                    </table>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                    <button type="submit" class="btn btn-primary">Thêm</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </td>
+        </tr>
+
+        <td align="center">
+          <a href="Contact.html">
+            <button type="button" class="btn btn-outline-primary">
+              Quay lại
+            </button>
+          </a>
+        </td>
+        <td align="left">
+          <button type="submit" class="btn btn-outline-primary">
+            Thêm mới
+          </button>
+        </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
+
+<script src="../../vendors/jquery/jquery-3.2.1.min.js"></script>
+<script src="../../vendors/bootstrap/bootstrap.bundle.min.js"></script>
+<script src="../../vendors/magnefic-popup/jquery.magnific-popup.min.js"></script>
+<script src="../../vendors/easing.min.js"></script>
+<script src="../../vendors/superfish.min.js"></script>
+<script src="../../vendors/owl-carousel/owl.carousel.min.js"></script>
+<script src="../../vendors/nice-select/jquery.nice-select.min.js"></script>
+<script src="../../vendors/jquery.ajaxchimp.min.js"></script>
+<script src="../../vendors/mail-script.js"></script>
+<script src="../../js/main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
