--- a/Case_Study/view/customer/Create.html
+++ b/Case_Study/view/customer/Create.html
@@ -52,7 +52,6 @@
   <div class="main_menu">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
-
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="icon-bar"></span>
@@ -75,7 +74,7 @@
   <div class="container h-100">
     <div class="blog-banner">
       <div class="text-center">
-        <h1> Customer</h1>
+        <h1> Khách Hàng</h1>
       </div>
     </div>
   </div>
@@ -83,12 +82,12 @@
 <div class="col-lg-12 mt-4">
   <div class="container-fluid">
     <div class="row">
-      <h2>Edit Facility</h2>
+      <h2>Thêm Khách Hàng</h2>
       <table class="table" cellpadding="5">
         <tr>
           <th>Loại khách:</th>
           <td>
-            <select class="form-select" >
+            <select class="form-select">
               <option value="0">--Loại Khách--</option>
               <option value="1">Member</option>
               <option value="2">Gold</option>
@@ -107,7 +106,7 @@
         <tr>
           <th>Giới tính:</th>
           <td>
-            <select class="form-select" >
+            <select class="form-select">
               <option value="0">--Giới Tính--</option>
               <option value="1">Nam</option>
               <option value="2">Nữ</option>
@@ -125,7 +124,7 @@
         </tr>
         <tr>
           <th>Email:</th>
-          <td><input class="form-control" type="text" ></td>
+          <td><input class="form-control" type="text"></td>
         </tr>
         <tr>
           <th>Địa chỉ:</th>
@@ -135,7 +134,7 @@
           <td align="center">
             <a href="Customer.html">
               <button type="button" class="btn btn-outline-primary">
-                Quay lại danh sách khách hàng
+                Quay lại
               </button>
             </a>
           </td>
