--- a/Case_Study/view/customer/Edit.html
+++ b/Case_Study/view/customer/Edit.html
@@ -75,7 +75,7 @@
   <div class="container h-100">
     <div class="contact-banner">
       <div class="text-center">
-        <h1>Edit</h1>
+        <h1></h1>
       </div>
     </div>
   </div>
@@ -84,12 +84,12 @@
 <div class="col-lg-12 mt-4">
   <div class="container-fluid">
     <div class="row">
-      <h2>Edit Facility</h2>
+      <h2>Sửa Thông Tin Khách Hàng</h2>
       <table class="table" cellpadding="5">
         <tr>
           <th>Loại khách:</th>
           <td>
-            <select class="form-select" >
+            <select class="form-select">
               <option value="0">--Loại Khách--</option>
               <option value="1">Member</option>
               <option value="2">Gold</option>
@@ -108,7 +108,7 @@
         <tr>
           <th>Giới tính:</th>
           <td>
-            <select class="form-select" >
+            <select class="form-select">
               <option value="0">--Giới Tính--</option>
               <option value="1">Nam</option>
               <option value="2">Nữ</option>
@@ -117,7 +117,7 @@
           </td>
         </tr>
         <tr>
-          <th>Số căn cước:</th>
+          <th>Số CMND:</th>
           <td><input class="form-control" type="text"></td>
         </tr>
         <tr>
@@ -126,7 +126,7 @@
         </tr>
         <tr>
           <th>Email:</th>
-          <td><input class="form-control" type="text" ></td>
+          <td><input class="form-control" type="text"></td>
         </tr>
         <tr>
           <th>Địa chỉ:</th>
@@ -136,7 +136,7 @@
           <td align="center">
             <a href="Customer.html">
               <button type="button" class="btn btn-outline-primary">
-                Quay lại danh sách khách hàng
+                Quay lại
               </button>
             </a>
           </td>
@@ -150,7 +150,6 @@
     </div>
   </div>
 </div>
-
 
 
 <script src="../../vendors/jquery/jquery-3.2.1.min.js"></script>
