--- a/Case_Study/view/facility/Edit.html
+++ b/Case_Study/view/facility/Edit.html
@@ -13,9 +13,7 @@
   <link rel="stylesheet" href="../../vendors/linericon/style.css">
   <link rel="stylesheet" href="../../vendors/magnefic-popup/magnific-popup.css">
   <link rel="stylesheet" href="../../vendors/nice-select/nice-select.css">
-
   <link rel="stylesheet" href="../../css/style.css">
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -75,7 +73,7 @@
   <div class="container h-100">
     <div class="contact-banner">
       <div class="text-center">
-        <h1>Edit</h1>
+        <h1></h1>
       </div>
     </div>
   </div>
@@ -84,7 +82,7 @@
 <div class="col-lg-12 mt-4">
   <div class="container-fluid">
     <div class="row">
-      <h2>Edit Facility</h2>
+      <h2>Sửa Thông Tin Dịch Vụ</h2>
       <table class="table" cellpadding="5">
         <tr>
           <th>Loại dịch vụ:</th>
@@ -99,31 +97,19 @@
         </tr>
         <tr>
           <th>Tên dịch vụ:</th>
-          <td>
-            <input type="text" class="form-control">
-          </td>
-
+          <td><input type="text" class="form-control"></td>
         </tr>
         <tr>
           <th>Diện tích:</th>
-          <td>
-            <input type="text" class="form-control">
-          </td>
-
+          <td><input type="text" class="form-control"></td>
         </tr>
         <tr>
           <th>Giá thuê:</th>
-          <td>
-            <input type="text" class="form-control">
-          </td>
-
+          <td><input type="text" class="form-control"></td>
         </tr>
         <tr>
           <th>Số người tối đa:</th>
-          <td>
-            <input type="text" class="form-control">
-          </td>
-
+          <td><input type="text" class="form-control"></td>
         </tr>
         <tr>
           <th>Kiểu thuê:</th>
@@ -137,11 +123,10 @@
             </select>
           </td>
         </tr>
-
         <tr hidden id="standardRoom">
           <th>Loại phòng:</th>
           <td>
-            <select class="form-select" >
+            <select class="form-select">
               <option value="0">--Loại Phòng--</option>
               <option value="1">VIP</option>
               <option value="2">Professional</option>
@@ -152,29 +137,20 @@
         </tr>
         <tr hidden id="otherDescription">
           <th>Tiện nghi khác:</th>
-          <td>
-            <input class="form-control" type="text"/>
-          </td>
+          <td><input class="form-control" type="text"/></td>
         </tr>
         <tr hidden id="poolArea">
           <th>Diện tích hồ bơi:</th>
-          <td>
-            <input class="form-control" type="text"/>
-          </td>
+          <td><input class="form-control" type="text"/></td>
         </tr>
         <tr hidden id="numberFloor">
           <th>Số tầng:</th>
-          <td>
-            <input class="form-control" type="text"/>
-          </td>
+          <td><input class="form-control" type="text"/></td>
         </tr>
         <tr hidden id="facilityFree">
           <th>Dịch vụ miễn phí đi kèm:</th>
-          <td>
-            <input class="form-control" type="text"/>
-          </td>
+          <td><input class="form-control" type="text"/></td>
         </tr>
-
         <tr>
           <td align="center">
             <a href="Facility.html">
