--- a/Case_Study/task2/src/app/body/body.component.html
+++ b/Case_Study/task2/src/app/body/body.component.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="section-intro text-center pb-20px">
         <div class="section-intro__style">
-          <img src="../assets/img/home/bed-icon.png" alt="">
+          <img src="assets/img/home/bed-icon.png" alt="">
         </div>
         <h2>Our Guest Love Us</h2>
       </div>
@@ -24,7 +24,7 @@
         <div class="testi-carousel__item">
           <div class="media">
             <div class="testi-carousel__img">
-              <img src="../assets/img/home/testimonial1.png" alt="">
+              <img src="assets/img/home/testimonial1.png" alt="">
             </div>
             <div class="media-body">
               <p>Incidunt deleniti blanditiis quas aperiam recusandae consillo ullam quibusdam cum libero illo repell
@@ -39,7 +39,7 @@
         <div class="testi-carousel__item">
           <div class="media">
             <div class="testi-carousel__img">
-              <img src="../assets/img/home/testimonial2.png" alt="">
+              <img src="assets/img/home/testimonial2.png" alt="">
             </div>
             <div class="media-body">
               <p>Incidunt deleniti blanditiis quas aperiam recusandae consillo ullam quibusdam cum libero illo repell
@@ -55,7 +55,7 @@
         <div class="testi-carousel__item">
           <div class="media">
             <div class="testi-carousel__img">
-              <img src="../assets/img/home/testimonial3.png" alt="">
+              <img src="assets/img/home/testimonial3.png" alt="">
             </div>
             <div class="media-body">
               <p>Incidunt deleniti blanditiis quas aperiam recusandae consillo ullam quibusdam cum libero illo repell
@@ -71,7 +71,7 @@
         <div class="testi-carousel__item">
           <div class="media">
             <div class="testi-carousel__img">
-              <img src="../assets/img/home/testimonial1.png" alt="">
+              <img src="assets/img/home/testimonial1.png" alt="">
             </div>
             <div class="media-body">
               <p>Incidunt deleniti blanditiis quas aperiam recusandae consillo ullam quibusdam cum libero illo repell
@@ -87,7 +87,7 @@
         <div class="testi-carousel__item">
           <div class="media">
             <div class="testi-carousel__img">
-              <img src="../assets/img/home/testimonial2.png" alt="">
+              <img src="assets/img/home/testimonial2.png" alt="">
             </div>
             <div class="media-body">
               <p>Incidunt deleniti blanditiis quas aperiam recusandae consillo ullam quibusdam cum libero illo repell
@@ -103,7 +103,7 @@
         <div class="testi-carousel__item">
           <div class="media">
             <div class="testi-carousel__img">
-              <img src="../assets/img/home/testimonial3.png" alt="">
+              <img src="assets/img/home/testimonial3.png" alt="">
             </div>
             <div class="media-body">
               <p>Incidunt deleniti blanditiis quas aperiam recusandae consillo ullam quibusdam cum libero illo repell
@@ -119,7 +119,7 @@
         <div class="testi-carousel__item">
           <div class="media">
             <div class="testi-carousel__img">
-              <img src="../assets/img/home/testimonial1.png" alt="">
+              <img src="assets/img/home/testimonial1.png" alt="">
             </div>
             <div class="media-body">
               <p>Incidunt deleniti blanditiis quas aperiam recusandae consillo ullam quibusdam cum libero illo repell
@@ -135,7 +135,7 @@
         <div class="testi-carousel__item">
           <div class="media">
             <div class="testi-carousel__img">
-              <img src="../assets/img/home/testimonial2.png" alt="">
+              <img src="assets/img/home/testimonial2.png" alt="">
             </div>
             <div class="media-body">
               <p>Incidunt deleniti blanditiis quas aperiam recusandae consillo ullam quibusdam cum libero illo repell
@@ -150,5 +150,4 @@
       </div>
     </div>
   </section>
-
 </main>
