--- a/Case_Study/task2/src/app/header/header.component.html
+++ b/Case_Study/task2/src/app/header/header.component.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="d-flex align-items-center">
         <div id="logo">
-          <a href="../index.html"><img src="../assets/img/logo@2x.png" alt="" title="" width="40"
+          <a href="../index.html"><img src="assets/img/logo@2x.png" alt="" title="" width="40"
                                        height="70"/></a>
         </div>
         <div class="ml-auto d-none d-md-block d-md-flex">
