--- a/ss03/exercise/angular-calculator-app/src/app/calculator/calculator.component.html
+++ b/ss03/exercise/angular-calculator-app/src/app/calculator/calculator.component.html
@@ -20,7 +20,7 @@
     </td>
     <td><input type="number" [(ngModel)]="secondNumber"></td>
     <td>
-      <button (click)="calculator(firstNumber,secondNumber,calculation)">Result</button>
+      <button (click)="calculator(calculation)">Result</button>
     </td>
     <td>{{result}}</td>
   </tr>
