--- a/Case_Study/task2/src/app/app.component.html
+++ b/Case_Study/task2/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<app-body></app-body>
+<!--<app-customer-list></app-customer-list>-->
+<router-outlet></router-outlet>
 <app-footer></app-footer>
+
