--- a/Case_Study/task2/src/app/header/header.component.html
+++ b/Case_Study/task2/src/app/header/header.component.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="d-flex align-items-center">
         <div id="logo">
-          <a href="../index.html"><img src="assets/img/logo@2x.png" alt="" title="" width="40"
+          <a routerLink="/"><img src="assets/img/logo@2x.png" alt="" title="" width="40"
                                        height="70"/></a>
         </div>
         <div class="ml-auto d-none d-md-block d-md-flex">
@@ -41,10 +41,10 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
           <ul class="nav navbar-nav menu_nav">
-            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-            <li class="nav-item active"><a class="nav-link" href="customer.html">Customer</a></li>
-            <li class="nav-item"><a class="nav-link" href="../facility/facility.html">Facility</a></li>
-            <li class="nav-item"><a class="nav-link" href="../contract/contract.html">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
+            <li class="nav-item active"><a class="nav-link" routerLink="/customer">Customer</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="/facility">Facility</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="/contract">Contact</a></li>
           </ul>
         </div>
 
