--- a/Case_Study/task2/src/app/contract/contract-list/contract-list.component.html
+++ b/Case_Study/task2/src/app/contract/contract-list/contract-list.component.html
@@ -1,1 +1,172 @@
-<p>contract-list works!</p>
+<section class="contact-banner-area" id="contact">
+  <div class="container h-100">
+    <div class="contact-banner">
+      <div class="text-center">
+        <h1>Contract</h1>
+      </div>
+    </div>
+  </div>
+</section>
+<div class="section-intro text-center pb-80px" style="padding: 30px">
+  <div class="section-intro__style">
+    <a routerLink="/contract/create" style="text-decoration: none">
+      <img src="assets/img/home/bed-icon.png" alt="">
+      <h3>Add Contract</h3>
+    </a>
+  </div>
+</div>
+
+<table class="table table-striped table-bordered" id="tableCustomer" style="swidth:100%">
+  <thead>
+  <tr class="table-success">
+    <th>STT</th>
+    <th>Facility Name</th>
+    <th>Customer Name</th>
+    <th>Star Day</th>
+    <th>End Day</th>
+    <th>Deposits</th>
+    <th>Total Pay</th>
+    <th colspan="2">Accompanied service</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td>1</td>
+    <td>Villa 1</td>
+    <td>Phạm Thành Tri</td>
+    <td>31/08/2021</td>
+    <td>01/09/2021</td>
+    <td>300</td>
+    <td>2000</td>
+    <td>
+      <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#plus1">+</button>
+      <div class="modal fade" id="plus1"
+           data-bs-backdrop="static"
+           data-bs-keyboard="false" tabindex="-1" aria-labelledby="addAttachFacilityLabel"
+           aria-hidden="true">
+        <div class="modal-dialog"
+             style="position: absolute;float: left;left: 50%;top: 50%; transform: translate(-50%, -50%); width: 500px">
+          <div class="modal-content">
+            <div class="modal-header bg-primary">
+              <h5 class="modal-title text-white" id="plus1Label">Extra service included</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <table class="table table-striped table-bordered">
+                <tr>
+                  <th>Add for service :</th>
+                  <td>Sea View Suite</td>
+                </tr>
+                <tr>
+                  <td>Rent Bicycle <input type="checkbox" class="form-check"></td>
+                  <td><input type="number" name="quantity" value="0" class="form-control"></td>
+                </tr>
+                <tr>
+                  <td>Rent Moto<input type="checkbox" class="form-check"></td>
+                  <td><input type="number" name="quantity" value="0" class="form-control"></td>
+                </tr>
+                <tr>
+                  <td>Karaoke <input type="checkbox" class="form-check"></td>
+                  <td><input type="number" name="quantity" value="0" class="form-control"></td>
+                </tr>
+                <tr>
+                  <td>Buffet Morning<input type="checkbox" class="form-check"></td>
+                  <td><input type="number" name="quantity" value="0" class="form-control"></td>
+                </tr>
+                <tr>
+                  <td>Buffet Lunch <input type="checkbox" class="form-check"></td>
+                  <td><input type="number" name="quantity" value="0" class="form-control"></td>
+                </tr>
+                <tr>
+                  <td>Buffet Night <input type="checkbox" class="form-check"></td>
+                  <td><input type="number" name="quantity" value="0" class="form-control"></td>
+                </tr>
+              </table>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary"
+                      data-bs-dismiss="modal">Close
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                     class="bi bi-x-octagon" viewBox="0 0 16 16">
+                  <path d="M4.54.146A.5.5 0 0 1 4.893 0h6.214a.5.5 0 0 1 .353.146l4.394 4.394a.5.5 0 0 1 .146.353v6.214a.5.5 0 0 1-.146.353l-4.394 4.394a.5.5 0 0 1-.353.146H4.893a.5.5 0 0 1-.353-.146L.146 11.46A.5.5 0 0 1 0 11.107V4.893a.5.5 0 0 1 .146-.353L4.54.146zM5.1 1 1 5.1v5.8L5.1 15h5.8l4.1-4.1V5.1L10.9 1H5.1z"/>
+                  <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                </svg>
+              </button>
+              <button type="submit" class="btn btn-primary">Add
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                     class="bi bi-plus-circle" viewBox="0 0 16 16">
+                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </td>
+    <td>
+      <button class="btn btn-primary" data-bs-toggle="modal"
+              data-bs-target="#attach1">
+        List
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+             class="bi bi-card-checklist" viewBox="0 0 16 16">
+          <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
+          <path d="M7 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0zM7 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z"/>
+        </svg>
+      </button>
+
+      <div class="modal fade" id="attach1"
+           data-bs-backdrop="static"
+           data-bs-keyboard="false" tabindex="-1" aria-labelledby="getAttachListLabel"
+           aria-hidden="true">
+        <div class="modal-dialog"
+             style="position: absolute;float: left;left: 50%;top: 50%; transform: translate(-50%, -50%); width: 500px">
+          <div class="modal-content">
+            <div class="modal-header bg-primary">
+              <h5 class="modal-title text-white" id="attach1Label">List Accompanied service</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <table class="table table-striped table-bordered">
+                <tr>
+                  <th>STT</th>
+                  <th>Name</th>
+                  <th>Price</th>
+                  <th>Unit</th>
+                  <th>Status</th>
+                  <th>Amount</th>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>Rent Moto</td>
+                  <td>200.000 đ</td>
+                  <td>1</td>
+                  <td>Still Good</td>
+                  <td>2</td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Buffet Night</td>
+                  <td>249.000 đ</td>
+                  <td>set</td>
+                  <td>Full</td>
+                  <td>2</td>
+                </tr>
+              </table>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                     class="bi bi-x-octagon" viewBox="0 0 16 16">
+                  <path d="M4.54.146A.5.5 0 0 1 4.893 0h6.214a.5.5 0 0 1 .353.146l4.394 4.394a.5.5 0 0 1 .146.353v6.214a.5.5 0 0 1-.146.353l-4.394 4.394a.5.5 0 0 1-.353.146H4.893a.5.5 0 0 1-.353-.146L.146 11.46A.5.5 0 0 1 0 11.107V4.893a.5.5 0 0 1 .146-.353L4.54.146zM5.1 1 1 5.1v5.8L5.1 15h5.8l4.1-4.1V5.1L10.9 1H5.1z"/>
+                  <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </td>
+  </tr>
+  </tbody>
+</table>
