--- a/Case_Study/task2/src/app/customer/customer-create/customer-create.component.html
+++ b/Case_Study/task2/src/app/customer/customer-create/customer-create.component.html
@@ -1,1 +1,89 @@
-<p>customer-create works!</p>
+<section class="blog-banner-area" id="about">
+  <div class="container h-100">
+    <div class="blog-banner">
+      <div class="text-center">
+        <h1>Customer</h1>
+      </div>
+    </div>
+  </div>
+</section>
+<div class="col-lg-12 mt-4">
+  <div class="container-fluid">
+    <div class="row">
+      <h2>Customer New</h2>
+      <table class="table" cellpadding="5">
+        <tr>
+          <th>Customer Type:</th>
+          <td>
+            <select class="form-select">
+              <option value="0">--Customer Type--</option>
+              <option value="1">Member</option>
+              <option value="2">Gold</option>
+              <option value="3">Diamond</option>
+            </select>
+          </td>
+        </tr>
+        <tr>
+          <th>Name:</th>
+          <td><input class="form-control" type="text"></td>
+        </tr>
+        <tr>
+          <th>Birth Day:</th>
+          <td><input class="form-control" type="date"></td>
+        </tr>
+        <tr>
+          <th>Gender:</th>
+          <td>
+            <select class="form-select">
+              <option value="0">--Gender--</option>
+              <option value="1">Male</option>
+              <option value="2">Female</option>
+              <option value="3">LGBT</option>
+            </select>
+          </td>
+        </tr>
+        <tr>
+          <th>Id Card:</th>
+          <td><input class="form-control" type="text"></td>
+        </tr>
+        <tr>
+          <th>Phone Number:</th>
+          <td><input class="form-control" type="text"></td>
+        </tr>
+        <tr>
+          <th>Email:</th>
+          <td><input class="form-control" type="text"></td>
+        </tr>
+        <tr>
+          <th>Address:</th>
+          <td><input class="form-control" type="text"></td>
+        </tr>
+        <tr>
+          <td align="center">
+            <a routerLink="/customer">
+              <button type="button" class="btn btn-outline-primary">
+                Back
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                     class="bi bi-arrow-counterclockwise" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd"
+                        d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z"/>
+                  <path d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466z"/>
+                </svg>
+              </button>
+            </a>
+          </td>
+          <td align="left">
+            <button type="submit" class="btn btn-outline-primary">
+              Add
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                   class="bi bi-plus-circle" viewBox="0 0 16 16">
+                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+              </svg>
+            </button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
