--- a/Case_Study/task2/src/app/customer/customer-edit/customer-edit.component.html
+++ b/Case_Study/task2/src/app/customer/customer-edit/customer-edit.component.html
@@ -1,101 +1,86 @@
-<div class="section-intro text-center pb-80px" style="padding: 30px">
-  <div class="section-intro__style">
-    <a href="create.html" style="text-decoration: none">
-      <img src="../../img/home/bed-icon.png" alt="">
-      <h3>Create Customer</h3>
-    </a>
-  </div>
-</div>
-<table class="table table-striped table-bordered" id="tableCustomer" style="swidth:100%">
-  <thead>
-  <tr class="table-success">
-    <th>No.</th>
-    <th>Customer Type</th>
-    <th>Name</th>
-    <th>Birth Day</th>
-    <th>Gender</th>
-    <th>Id Card</th>
-    <th>Phone Numner</th>
-    <th>Email</th>
-    <th>Address</th>
-    <th colspan="2"></th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr>
-    <td>1</td>
-    <td>Diamond</td>
-    <td>Phạm Thành Tri</td>
-    <td>30/10/1997</td>
-    <td>Nam</td>
-    <td>123456789</td>
-    <td>0977708085</td>
-    <td>phamthanhtri997@gmail.com</td>
-    <td>Pleiku</td>
-    <td><a href="edit.html">Edit</a>
-    </td>
-    <td>
-      <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        Delete
-      </button>
-
-      <!-- Modal -->
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog"
-             style="position: absolute;float: left;left: 50%;top: 50%; transform: translate(-50%, -150%); width: 500px">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Confirm</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              Do you want to delete client Phạm Thành Tri
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Delete</button>
-            </div>
-          </div>
-        </div>
+<section class="blog-banner-area" id="about">
+  <div class="container h-100">
+    <div class="blog-banner">
+      <div class="text-center">
+        <h1>Customer</h1>
       </div>
-    </td>
-  </tr>
-  </tbody>
-</table>
-
-<div>
-  <nav class="blog-pagination justify-content-center d-flex">
-    <ul class="pagination">
-      <li class="page-item">
-        <a href="#" class="page-link" aria-label="Previous">
-          <span aria-hidden="true">
-            <span class="lnr lnr-chevron-left"></span>
-          </span>
-        </a>
-      </li>
-      <li class="page-item active">
-        <a href="#" class="page-link">01</a>
-      </li>
-      <li class="page-item ">
-        <a href="#" class="page-link">02</a>
-      </li>
-      <li class="page-item">
-        <a href="#" class="page-link">03</a>
-      </li>
-      <li class="page-item">
-        <a href="#" class="page-link">04</a>
-      </li>
-      <li class="page-item">
-        <a href="#" class="page-link">09</a>
-      </li>
-      <li class="page-item">
-        <a href="#" class="page-link" aria-label="Next">
-          <span aria-hidden="true">
-            <span class="lnr lnr-chevron-right"></span>
-          </span>
-        </a>
-      </li>
-    </ul>
-  </nav>
+    </div>
+  </div>
+</section>
+<div class="col-lg-12 mt-4">
+  <div class="container-fluid">
+    <div class="row">
+      <h2>Edit Customer</h2>
+      <table class="table" cellpadding="5">
+        <tr>
+          <th>Customer Type:</th>
+          <td>
+            <select class="form-select">
+              <option value="0">--Customer Type--</option>
+              <option value="1">Member</option>
+              <option value="2">Gold</option>
+              <option value="3">Diamond</option>
+            </select>
+          </td>
+        </tr>
+        <tr>
+          <th>Name:</th>
+          <td><input class="form-control" type="text"></td>
+        </tr>
+        <tr>
+          <th>Birth Day:</th>
+          <td><input class="form-control" type="date"></td>
+        </tr>
+        <tr>
+          <th>Gender:</th>
+          <td>
+            <select class="form-select">
+              <option value="0">--Gender--</option>
+              <option value="1">Male</option>
+              <option value="2">Female</option>
+              <option value="3">LGBT</option>
+            </select>
+          </td>
+        </tr>
+        <tr>
+          <th>Id Card:</th>
+          <td><input class="form-control" type="text"></td>
+        </tr>
+        <tr>
+          <th>Phone Number:</th>
+          <td><input class="form-control" type="text"></td>
+        </tr>
+        <tr>
+          <th>Email:</th>
+          <td><input class="form-control" type="text"></td>
+        </tr>
+        <tr>
+          <th>Address:</th>
+          <td><input class="form-control" type="text"></td>
+        </tr>
+        <tr>
+          <td align="center">
+            <a routerLink="/customer">
+              <button type="button" class="btn btn-outline-primary">
+                Back
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-counterclockwise" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z"/>
+                  <path d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466z"/>
+                </svg>
+              </button>
+            </a>
+          </td>
+          <td align="left">
+            <button type="submit" class="btn btn-outline-primary">
+              Add
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+              </svg>
+            </button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
 </div>
